--- a/service-2.html
+++ b/service-2.html
@@ -380,110 +380,110 @@
                                     </div>
                                 </div><!-- end magnifier -->
                             </div>
-                            <div class="pitem entry item-w1 item-h1 cat3">
-                                <img src="images/photos/IMG_0032.jpg" alt="" class="img-responsive">
+                            <div class="pitem entry item-w1 item-h1 cat2">
+                                <img src="images/photos/Concretestone%20cleaning/IMG_0043.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
                                     <div class="buttons">
-                                        <a data-rel="prettyPhoto" href="upload/placeholder.png" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
+                                        <a data-rel="prettyPhoto" href="images/photos/Concretestone%20cleaning/IMG_0043.jpg" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
                                         <a class="st" rel="bookmark" href="gallery-single.html"><span class="fa fa-link"></span></a>
                                     </div>
                                 </div><!-- end magnifier -->
                             </div>
-                            <div class="pitem entry item-w1 item-h1 cat3">
-                                <img src="images/photos/IMG_0035.jpg" alt="" class="img-responsive">
+                            <div class="pitem entry item-w1 item-h1 cat2">
+                                <img src="images/photos/Concretestone%20cleaning/IMG_0046.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
                                     <div class="buttons">
-                                        <a data-rel="prettyPhoto" href="upload/placeholder.png" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
+                                        <a data-rel="prettyPhoto" href="images/photos/Concretestone%20cleaning/IMG_0046.jpg" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
                                         <a class="st" rel="bookmark" href="gallery-single.html"><span class="fa fa-link"></span></a>
                                     </div>
                                 </div><!-- end magnifier -->
                             </div>
-                            <div class="pitem entry item-w1 item-h1 cat3">
-                                <img src="images/photos/IMG_0036.jpg" alt="" class="img-responsive">
+                            <div class="pitem entry item-w1 item-h1 cat2">
+                                <img src="images/photos/Concretestone%20cleaning/IMG_0049.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
                                     <div class="buttons">
-                                        <a data-rel="prettyPhoto" href="upload/placeholder.png" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
+                                        <a data-rel="prettyPhoto" href="images/photos/Concretestone%20cleaning/IMG_0049.jpg" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
                                         <a class="st" rel="bookmark" href="gallery-single.html"><span class="fa fa-link"></span></a>
                                     </div>
                                 </div><!-- end magnifier -->
                             </div>
-                            <div class="pitem entry item-w1 item-h1 cat3">
-                                <img src="images/photos/IMG_0037.jpg" alt="" class="img-responsive">
+                            <div class="pitem entry item-w1 item-h1 cat2">
+                                <img src="images/photos/Concretestone%20cleaning/IMG_0050.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
                                     <div class="buttons">
-                                        <a data-rel="prettyPhoto" href="upload/placeholder.png" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
+                                        <a data-rel="prettyPhoto" href="images/photos/Concretestone%20cleaning/IMG_0050.jpg" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
                                         <a class="st" rel="bookmark" href="gallery-single.html"><span class="fa fa-link"></span></a>
                                     </div>
                                 </div><!-- end magnifier -->
                             </div>
-                            <div class="pitem entry item-w1 item-h1 cat3">
-                                <img src="images/photos/IMG_0038.jpg" alt="" class="img-responsive">
+                            <div class="pitem entry item-w1 item-h1 cat2">
+                                <img src="images/photos/Concretestone%20cleaning/IMG_0060.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
                                     <div class="buttons">
-                                        <a data-rel="prettyPhoto" href="upload/placeholder.png" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
+                                        <a data-rel="prettyPhoto" href="images/photos/Concretestone%20cleaning/IMG_0060.jpg" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
                                         <a class="st" rel="bookmark" href="gallery-single.html"><span class="fa fa-link"></span></a>
                                     </div>
                                 </div><!-- end magnifier -->
                             </div>
-                            <div class="pitem entry item-w1 item-h1 cat3">
-                                <img src="images/photos/IMG_0039.jpg" alt="" class="img-responsive">
+                            <div class="pitem entry item-w1 item-h1 cat2">
+                                <img src="images/photos/Concretestone%20cleaning/IMG_0063.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
                                     <div class="buttons">
-                                        <a data-rel="prettyPhoto" href="upload/placeholder.png" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
+                                        <a data-rel="prettyPhoto" href="images/photos/Concretestone%20cleaning/IMG_0063.jpg" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
                                         <a class="st" rel="bookmark" href="gallery-single.html"><span class="fa fa-link"></span></a>
                                     </div>
                                 </div><!-- end magnifier -->
                             </div>
-                            <div class="pitem entry item-w1 item-h1 cat3">
-                                <img src="images/photos/IMG_0040.jpg" alt="" class="img-responsive">
+                            <div class="pitem entry item-w1 item-h1 cat2">
+                                <img src="images/photos/Concretestone%20cleaning/IMG_0066.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
                                     <div class="buttons">
-                                        <a data-rel="prettyPhoto" href="upload/placeholder.png" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
+                                        <a data-rel="prettyPhoto" href="images/photos/Concretestone%20cleaning/IMG_0066.jpg" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
                                         <a class="st" rel="bookmark" href="gallery-single.html"><span class="fa fa-link"></span></a>
                                     </div>
                                 </div><!-- end magnifier -->
                             </div>
-                            <div class="pitem entry item-w1 item-h1 cat3">
-                                <img src="images/photos/IMG_0041.jpg" alt="" class="img-responsive">
+                            <div class="pitem entry item-w1 item-h1 cat2">
+                                <img src="images/photos/Concretestone%20cleaning/IMG_0067.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
                                     <div class="buttons">
-                                        <a data-rel="prettyPhoto" href="upload/placeholder.png" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
+                                        <a data-rel="prettyPhoto" href="images/photos/Concretestone%20cleaning/IMG_0067.jpg class="st" rel="bookmark"><span class="fa fa-search"></span></a>
                                         <a class="st" rel="bookmark" href="gallery-single.html"><span class="fa fa-link"></span></a>
                                     </div>
                                 </div><!-- end magnifier -->
                             </div>
-                            <div class="pitem entry item-w1 item-h1 cat3">
-                                <img src="images/photos/IMG_0042.jpg" alt="" class="img-responsive">
+                            <div class="pitem entry item-w1 item-h1 cat2">
+                                <img src="images/photos/Concretestone%20cleaning/IMG_0068.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
                                     <div class="buttons">
-                                        <a data-rel="prettyPhoto" href="upload/placeholder.png" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
+                                        <a data-rel="prettyPhoto" href="images/photos/Concretestone%20cleaning/IMG_0068.jpg" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
                                         <a class="st" rel="bookmark" href="gallery-single.html"><span class="fa fa-link"></span></a>
                                     </div>
                                 </div><!-- end magnifier -->
                             </div>
-                            <div class="pitem entry item-w1 item-h1 cat3">
-                                <img src="images/photos/IMG_0043.jpg" alt="" class="img-responsive">
+                            <div class="pitem entry item-w1 item-h1 cat2">
+                                <img src="images/photos/Concretestone%20cleaning/IMG_0069.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
                                     <div class="buttons">
-                                        <a data-rel="prettyPhoto" href="upload/placeholder.png" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
+                                        <a data-rel="prettyPhoto" href="images/photos/Concretestone%20cleaning/IMG_0069.jpg" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
                                         <a class="st" rel="bookmark" href="gallery-single.html"><span class="fa fa-link"></span></a>
                                     </div>
                                 </div><!-- end magnifier -->
                             </div>
-                            <div class="pitem entry item-w1 item-h1 cat3">
-                                <img src="images/photos/IMG_0044.jpg" alt="" class="img-responsive">
+                            <div class="pitem entry item-w1 item-h1 cat2">
+                                <img src="images/photos/Concretestone%20cleaning/IMG_0073.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
                                     <div class="buttons">
-                                        <a data-rel="prettyPhoto" href="upload/placeholder.png" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
+                                        <a data-rel="prettyPhoto" href="images/photos/Concretestone%20cleaning/IMG_0073.jpg" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
                                         <a class="st" rel="bookmark" href="gallery-single.html"><span class="fa fa-link"></span></a>
                                     </div>
                                 </div><!-- end magnifier -->
                             </div>
-                            <div class="pitem entry item-w1 item-h1 cat3">
-                                <img src="images/photos/IMG_0045.jpg" alt="" class="img-responsive">
+                            <div class="pitem entry item-w1 item-h1 cat2">
+                                <img src="images/photos/Concretestone%20cleaning/IMG_0074.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
                                     <div class="buttons">
-                                        <a data-rel="prettyPhoto" href="upload/placeholder.png" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
+                                        <a data-rel="prettyPhoto" href="images/photos/Concretestone%20cleaning/IMG_0074.jpg" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
                                         <a class="st" rel="bookmark" href="gallery-single.html"><span class="fa fa-link"></span></a>
                                     </div>
                                 </div><!-- end magnifier -->
