--- a/about-2.html
+++ b/about-2.html
@@ -14,7 +14,7 @@
     <meta name="author" content="">
     <meta name="keywords" content="">
 
-    <title>NEXT CONSTRUCTION | A Construction Responsive HTML Template</title>
+    <title>Professional Exterior Cleaning | Scenery Upgrade</title>
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
@@ -130,10 +130,12 @@
                                 <div class="tab-content row">
                                     <div id="home" class="tab-pane fade in active">
                                         <div class="row">
-                                            <div class="col-md-7">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. amet, consectetur adipisicing elit..</p>
-                                                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                                                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                            <div class="col-md-6" style="margin-top: 4em">
+                                                <p>Years of experience and knowledge in power washing. LICENSED AND INSURED</p>
+
+                                                <p>Scenery Upgrade offers professional home services since 2006 to help keep your home looking clean. We have years of experience and knowledge. We are LICENSED AND INSURED. We provide low pressure power washing so it won't damage your beautiful home on the following homes, wood fences, gutter's, roof's, deck's, and patio's.</p>
+
+                                                <p> We also offer full power washing with eco friendly chemicals for concrete cleaning and hard surfaces that are not painted or finished surface's. Call us for your power washing property needs and for a free estimate!</p>
                                             </div>
                                             <div id="videoyoutube" class="col-md-5">
                                                 <iframe id="video" src="https://instagram.com/p/BZMI03ZnWE6/embed/" width=370 height=512></iframe>
@@ -146,13 +148,17 @@
                                     </div>
                                     <div id="menu2" class="tab-pane fade">
                                         <div class="row">
-                                            <div id="videoyoutube" class="col-md-5">
+                                            <div id="videoyoutube" class="col-md-5 hidden-xs">
                                                 <iframe id="video" src="https://www.instagram.com/p/BahXxZqn3sY/embed/" width=370 height=512></iframe>
                                             </div>
-                                            <div class="col-md-7">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. amet, consectetur adipisicing elit..</p>
-                                                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                                                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                            <div class="col-md-1 hidden-xs"></div>
+                                            <div class="col-md-6 "style="margin-top: 4em">
+                                                    <h3>How Did You Get Started?</h3>
+                                                    <p>I chose to work in this industry because I truly get any enjoyment out of coming to a property and it's green and moldy but when I leave I know that it is nice and clean and presentable that's why the name of my business is Scenery upgrade because that truly is what we are here for the services that we offer to upgrade the scenery.</p>
+                                                    <p>We started in this industry in 2006. We describe our business as Rooted in the community</p>
+                                                    
+                                                    <h3>What's the Most Important Part of Your Business?</h3>
+                                                    <p>The most important part to me of business that we deliver a consistent level of service to each and every project</p>
                                             </div>
                                         </div>
                                     </div>
@@ -197,44 +203,37 @@
         <section class="section white nopadbot">
             <div class="container-fluid">
                 <div class="general-title text-center">
-                    <h4>Our Machines</h4>
+                    <h4>Our Equipment</h4>
                     <hr>
                     <p class="lead">Odec adesterc timeam toruatos, eam debitis sententiae examles.Cure sed homerous<br> 
                     alienum.Cu sed homero alienum lobortis</p>
                 </div><!-- end general title -->
 
                 <div class="row service-style-2 text-center">
-                    <div class="col-md-3 col-sm-6 bgcolor1">
+                    <div class="col-md-4 col-sm-12 bgcolor1">
                         <div class="services-1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
-                            <img src="images/clean-machine.png" alt="" style="width: 110px">
-                            <h4>excavation truck</h4>
+                            <img src="images/NoBleach.jpg" alt="" style="width: 100%">
+                            <h4>No Bleach</h4>
                             <p>Odec adesterc timeam toruatos, eam debitis sententiae examles.Cure sed homerous alienum.Cu sed homero alienum lobortis</p>
                         </div><!-- end custom-module -->
                     </div><!-- end col -->
 
-                    <div class="col-md-3 col-sm-6 bgcolor1">
+                    <div class="col-md-4 col-sm-12 bgcolor1">
                         <div class="services-1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
-                            <img src="images/icons/mini_icon_02.png" alt="">
-                            <h4>Path Correction Tool</h4>
+                            <img src="images/plant.jpg" alt="" style="width: 100%">
+                            <h4>Harm-free for plants </h4>
                             <p>Odec adesterc timeam toruatos, eam debitis sententiae examles.Cure sed homerous alienum.Cu sed homero alienum lobortis</p>
                         </div><!-- end custom-module -->
                     </div><!-- end col -->
 
-                    <div class="col-md-3 col-sm-6 bgcolor1">
+                    <div class="col-md-4 col-sm-12 bgcolor1">
                         <div class="services-1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s">
-                            <img src="images/icons/mini_icon_04.png" alt="">
-                            <h4>Cement Machine</h4>
+                            <img src="images/pet.png" alt="" style="width: 100%">
+                            <h4>No danger to pets</h4>
                             <p>Odec adesterc timeam toruatos, eam debitis sententiae examles.Cure sed homerous alienum.Cu sed homero alienum lobortis</p>
                         </div><!-- end custom-module -->
                     </div><!-- end col -->
 
-                    <div class="col-md-3 col-sm-6 bgcolor1">
-                        <div class="services-1 wow fadeIn" data-wow-duration="1s" data-wow-delay="1s">
-                            <img src="images/icons/mini_icon_03.png" alt="">
-                            <h4>Bulldozer</h4>
-                            <p>Odec adesterc timeam toruatos, eam debitis sententiae examles.Cure sed homerous alienum.Cu sed homero alienum lobortis</p>
-                        </div><!-- end custom-module -->
-                    </div><!-- end col -->
                 </div><!-- end row -->
             </div><!-- end container -->
         </section><!-- end section -->
