--- a/service-2.html
+++ b/service-2.html
@@ -119,24 +119,24 @@
 								<div class="col-md-12 col-sm-12 why-us">
                                     <i class="fa fa-4x fa-home"></i>
                                     <strong>Low pressure housewashing</strong>
-									<p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p> -->
 								</div><!-- end col -->
 								<div class="col-md-12 col-sm-12 why-us">
                                     <i class="fa fa-4x fa-life-ring"></i>
 									<strong>Low pressure pool deck cleaning</strong>
-									<p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p> -->
 								</div><!-- end col -->
 
                                 <div class="col-md-12 col-sm-12 why-us">
                                     <i class="fa fa-4x fa-clone"></i>
                                     <strong>Paever restoration</strong>
-                                    <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
+                                    <!-- <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p> -->
                                 </div><!-- end col -->
 
                                 <div class="col-md-12 col-sm-12 why-us">
                                     <i class="fa fa-4x fa-recycle"></i>
                                     <strong>Low pressure wood restoration</strong>
-                                    <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
+                                    <!-- <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p> -->
                                 </div><!-- end col -->
 							</div><!-- end col -->
 							
@@ -145,52 +145,52 @@
 							<div class="col-md-4">
 								<div class="col-md-12 col-sm-12 why-us">
                                     <i class="fa fa-4x fa-home"></i>
-									<strong>Gutter cleaning</strong>
-									<p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
+									<strong>Gutter Cleaning</strong>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p> -->
 								</div><!-- end col -->
 
 								<div class="col-md-12 col-sm-12 why-us">
                                     <i class="fa fa-4x fa-home"></i>
-									<strong>Commercial exterior cleaning</strong>
-									<p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
+									<strong>Commercial Exterior Cleaning</strong>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p> -->
 								</div><!-- end col -->
 
                                 <div class="col-md-12 col-sm-12 why-us">
                                     <i class="fa fa-4x fa-windows"></i>
-                                    <strong>Exterio window cleaning</strong>
-                                    <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
+                                    <strong>Exterior Window Cleaning</strong>
+                                    <!-- <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p> -->
                                 </div><!-- end col -->
 
                                 <div class="col-md-12 col-sm-12 why-us">
                                     <i class="fa fa-4x fa-eraser"></i>
-                                    <strong>Efflorescence removal </strong>
-                                    <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
+                                    <strong>Efflorescence Removal </strong>
+                                    <!-- <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p> -->
                                 </div><!-- end col -->
 							</div><!-- end col -->
 						
 							<div class="col-md-4">
 								<div class="col-md-12 col-sm-12 why-us">
                                     <i class="fa fa-4x fa-paint-brush"></i>
-									<strong>Vinal siding oxidation restoration</strong>
-									<p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
+									<strong>Vinal Siding Oxidation Restoration</strong>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p> -->
 								</div><!-- end col -->
 
 								<div class="col-md-12 col-sm-12 why-us">
                                     <i class="fa fa-4x fa-building"></i>
 									<strong>Low pressure brick cleaning</strong>
-									<p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p> -->
 								</div><!-- end col -->
 
                                 <div class="col-md-12 col-sm-12 why-us">
                                     <i class="fa fa-4x fa-road"></i>
                                     <strong>Concrete/stone cleaning</strong>
-                                    <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
+                                    <!-- <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p> -->
                                 </div><!-- end col -->
 
                                 <div class="col-md-12 col-sm-12 why-us">
                                     <i class="fa fa-4x fa-cut"></i>
                                     <strong>Lawn care maintenance</strong>
-                                    <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
+                                    <!-- <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p> -->
                                 </div><!-- end col -->
 							</div><!-- end col -->
 
@@ -210,10 +210,9 @@
                 <section class="section white nopadbot">
                     <div class="container-full">
                         <div class="general-title text-left">
-                            <h4>Construction PROJECTS</h4>
+                            <h4>Previous Projects</h4>
                             <hr>
-                            <p class="lead">Let's see all our awesome services with custom style Sed do eiusmod tempor incididunt<br>
-                            ut labore et dolore magna aliqua.</p>
+                            <p class="lead">Her you can see before and after pictures of our amazing work! Click on the filters to see our expertise in each of the services we are providing!</p>
                         </div><!-- end general title -->
 
                         <div class="text-left clearfix">
