--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                         data-elementdelay="0.1"
                                         data-endelementdelay="0.1"
                                         data-endspeed="1000"
-                                        style="z-index: 9; max-width: auto;font-size: 40px; max-height: auto; white-space: nowrap;">offering professional home services since 2006
+                                        style="z-index: 9; max-width: auto;font-size: 40px; max-height: auto; white-space: nowrap;">Full service exterioir cleaning
                                     </div>
                                     <div class="tp-caption slider_layer_01 text-left lft tp-resizeme"
                                         data-x="center"
@@ -99,7 +99,7 @@
                                         data-elementdelay="0.1"
                                         data-endelementdelay="0.1"
                                         data-endspeed="1000"
-                                        style="z-index: 9; max-width: auto; max-height: auto; white-space: nowrap;"> WE help keep your home look clean
+                                        style="z-index: 9; max-width: auto; max-height: auto; white-space: nowrap;"> Have been upgrading the scenery around the Carolinas since 2006
                                     </div>
                                     
                                     <div class="tp-caption slider_layer_03 slider_btn text-center lft tp-resizeme"
