--- a/service-2.html
+++ b/service-2.html
@@ -146,13 +146,13 @@
 							
 							<div class="col-md-4">
 								<div class="col-md-12 col-sm-12 why-us">
-                                    <i class="fa fa-4x fa-home"></i>
+                                    <i class="fa fa-4x fa-leaf"></i>
 									<strong>Gutter Cleaning</strong>
 									<!-- <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p> -->
 								</div><!-- end col -->
 
 								<div class="col-md-12 col-sm-12 why-us">
-                                    <i class="fa fa-4x fa-home"></i>
+                                    <i class="fa fa-4x fa-building"></i>
 									<strong>Commercial Exterior Cleaning</strong>
 									<!-- <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p> -->
 								</div><!-- end col -->
@@ -211,7 +211,7 @@
 				
                 <section class="section white nopadbot">
                     <div class="container-full">
-                        <div class="general-title text-left">
+                        <div class="general-title text-center">
                             <h4>Previous Projects</h4>
                             <hr>
                             <p class="lead">Her you can see before and after pictures of our amazing work! Click on the filters to see our expertise in each of the services we are providing!</p>
