--- a/service-2.html
+++ b/service-2.html
@@ -660,7 +660,7 @@
                                 </div><!-- end magnifier -->
                             </div>
                             <div class="pitem entry item-w1 item-h1 cat5">
-                                <img src="images/photos/Gutter%20cleaning/IMG_0058.JPG" alt="" class="img-responsive">
+                                <img src="images/gutter_cleaning_new.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
                                     <div class="buttons">
                                         <a data-rel="prettyPhoto" href="images/photos/Gutter%20cleaning/IMG_0058.JPG" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
@@ -668,15 +668,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="pitem entry item-w1 item-h1 cat5">
-                                <img src="images/photos/Gutter%20cleaning/IMG_0059.JPG" alt="" class="img-responsive">
-                                <div class="magnifier">
-                                    <div class="buttons">
-                                        <a data-rel="prettyPhoto" href="images/photos/Gutter%20cleaning/IMG_0059.JPG" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
-                                        <a class="st" rel="bookmark" href="gallery-single.html"><span class="fa fa-link"></span></a>
-                                    </div>
-                                </div>
-                            </div>
+
                             <div class="pitem entry item-w1 item-h2 cat5">
                                 <img src="images/photos/Gutter%20cleaning/IMG_0085.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
