--- a/about-2.html
+++ b/about-2.html
@@ -360,24 +360,51 @@
             </div><!-- end container -->
         </section><!-- end section -->
 
-        <section class="section white">
-            <div class="container-full">
-                <div class="general-title text-center">
-                    <h4>Our Clients</h4>
-                    <hr>
-                    <p class="lead">Throughout our journey, we have been blessed with the following world-recognized brands:</p>
-                </div><!-- end general title -->
+                <section class="section white nopadbot">
+                    <div class="container-full">
+                        <div class="general-title text-center">
+                            <h4>Why Should You Trust Us?</h4>
+                            <p class="lead">Over 12 years of professional experience made us top rated service providers on <a href="https://www.homeadvisor.com/rated.SceneryUpgrade.37885985.html">HomeAdvisor.com</a></p>
+                            <hr>
+                        </div><!-- end general title -->
+                        <div class="row module-wrapper text-center">
+                            <div class="col-md-4 col-sm-6 why-us">
+                                <a href="http://www.homeadvisor.com/rated.SceneryUpgrade.37885985.html" style="display: block; margin: 0 auto;"><img alt="HomeAdvisor Screened Pro" style="display:block; width: 100% !important; max-width: 80%" src="http://www.homeadvisor.com/images/sp-badges/soap-solid-border.png?sp=37885985&key=f9174d8a149b9e121efdb753a17bd485" /></a>
+                            </div><!-- end col -->
+                            <div class="col-md-4 col-sm-6 why-us">
+                                <a href="http://www.homeadvisor.com/c.Landscaping.Columbia.SC.-12046.html#spid=37885985" style="display: block; margin: 0 auto;"><img alt="Scenery Upgrade is a Top Rated HomeAdvisor Pro" style="display:block; width: 100% !important; max-width: 80%" src="http://www.homeadvisor.com/images/sp-badges/toprated-solid-border.png?sp=37885985&key=f9174d8a149b9e121efdb753a17bd485" /></a>
+                            </div><!-- end col -->
+                            <div class="col-md-4 col-sm-6 why-us">
+                                <a href="http://www.homeadvisor.com/c.Landscaping.Columbia.SC.-12046.html#spid=37885985" style="display: block; margin: 0 auto;"><img alt="HomeAdvisor Elite Customer Service - Scenery Upgrade" style="display:block; width: 100% !important; max-width: 80%" src="http://www.homeadvisor.com/images/sp-badges/elite-solid-border.png?sp=37885985&key=f9174d8a149b9e121efdb753a17bd485" /></a>
+                            </div>
+                        </div>
 
-                <div class="client_list_v_2 row">
-                    <div class="col-md-2 col-sm-3 col-xs-6" ><a href="#"><img style="width: 150px" src="images/applebees.png" alt=""></a></div>
-                    <div class="col-md-2 col-sm-3 col-xs-6" ><a href="#"><img style="width: 150px" src="images/columbia-fireflies%20(1).jpg" alt=""></a></div>
-                    <div class="col-md-2 col-sm-3 col-xs-6" ><a href="#"><img style="width: 150px" src="images/postal.png" alt=""></a></div>
-                    <div class="col-md-2 col-sm-3 col-xs-6" ><a href="#"><img style="width: 150px" src="images/sonic.png" alt=""></a></div>
-                    <div class="col-md-2 col-sm-3 col-xs-6" ><a href="#"><img style="width: 150px" src="images/starbucks.png" alt=""></a></div>
-                    <div class="col-md-2 col-sm-3 col-xs-6" ><a href="#"><img style="width: 150px" src="images/university_of_sc.png" alt=""></a></div>
-                </div>
-            </div><!-- end container -->
-        </section><!-- end section -->
+                        <div class="row module-wrapper text-center">
+                            <div class="col-md-4 col-sm-6 why-us">
+                                <a href="http://www.homeadvisor.com/rated.SceneryUpgrade.37885985.html" style="display: block; margin: 0 auto;"><img alt="Scenery Upgrade - Best of Award Winner" style="display:block; width: 100% !important; max-width: 80%" src="http://www.homeadvisor.com/images/sp-badges/boha-2015-solid-border.png?sp=37885985&key=f9174d8a149b9e121efdb753a17bd485" /></a>
+                            </div><!-- end col -->
+                            <div class="col-md-4 col-sm-6 why-us">
+                                <a href="http://www.homeadvisor.com/rated.SceneryUpgrade.37885985.html" style="display: block; margin: 0 auto;"><img alt="Trusted Local Reviews | Scenery Upgrade" style="display:block; width: 100% !important; max-width: 80%" src="http://www.homeadvisor.com/images/sp-badges/1year-solid-border.png?sp=37885985&key=f9174d8a149b9e121efdb753a17bd485" /></a>
+                            </div><!-- end col -->
+                            <div class="col-md-4 col-sm-6 why-us">
+                                <a href="http://www.homeadvisor.com/rated.SceneryUpgrade.37885985.html" style="display: block; margin: 0 auto;"><img alt="HomeAdvisor Tenured Pro - Scenery Upgrade" style="display:block; width: 100% !important; max-width: 80%" src="http://www.homeadvisor.com/images/sp-badges/3year-solid-border.png?sp=37885985&key=f9174d8a149b9e121efdb753a17bd485" /></a>
+                            </div>
+                        </div>
+
+                        <div class="row module-wrapper text-center">
+                            <div class="col-md-4 col-sm-6 why-us">
+                                <a href="http://www.homeadvisor.com/rated.SceneryUpgrade.37885985.html" style="display: block; margin: 0 auto;"><img alt="HomeAdvisor Reviews - Scenery Upgrade" style="display:block; width: 100% !important; max-width: 80%" src="http://www.homeadvisor.com/images/sp-badges/20reviews-solid-border.png?sp=37885985&key=f9174d8a149b9e121efdb753a17bd485" /></a>
+                            </div><!-- end col -->
+                            <div class="col-md-4 col-sm-6 why-us">
+                                <a href="http://www.homeadvisor.com/rated.SceneryUpgrade.37885985.html" style="display: block; margin: 0 auto;"><img alt="Local Trusted Reviews - Scenery Upgrade" style="display:block; width: 100% !important; max-width: 80%" src="http://www.homeadvisor.com/images/sp-badges/50reviews-solid-border.png?sp=37885985&key=f9174d8a149b9e121efdb753a17bd485" /></a>
+                            </div><!-- end col -->
+                            <div class="col-md-4 col-sm-6 why-us">
+                                <a href="http://www.homeadvisor.com/rated.SceneryUpgrade.37885985.html" style="display: block; margin: 0 auto;"><img alt="HomeAdvisor Reviews - Scenery Upgrade" style="display:block; width: 100% !important; max-width: 80%" src="http://www.homeadvisor.com/images/sp-badges/100reviews-solid-border.png?sp=37885985&key=f9174d8a149b9e121efdb753a17bd485" /></a>
+                            </div>
+                        </div>
+
+                    </div>
+                </section>
 
         <!-- <section class="section darkbg fullscreen paralbackground parallax" style="background-image:url('images/su2.jpg');" data-img-width="1688" data-img-height="1125" data-diff="100">
             <div class="overlay customoverlay"></div>
