--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                 <div class="general-title text-center">
                     <h4>Client review</h4>
                     <hr>
-
+пше
                 </div><!-- end general title -->
                 <div class="row">
                 <div class="col-md-3">
