--- a/service-2.html
+++ b/service-2.html
@@ -48,7 +48,7 @@
         <div class="row-offcanvas row-offcanvas-left">
             <div id="sidebar-fix" class="sidebar-offcanvas">
                 <div class="side-logo clearfix">
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" style="width:80%" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><img src="images/mailservice.png" style="width:80%" alt=""></a>
                 </div><!-- end logo -->
                 <ul class="sidebar-nav clearfix">
                     <li><a href="index.html">Home</a></li>
@@ -178,7 +178,7 @@
 								</div><!-- end col -->
 
 								<div class="col-md-12 col-sm-12 why-us">
-                                    <i class="fa fa-4x fa-building"></i>
+                                    <i class="fa fa-4x fa-align-justify"></i>
 									<strong>Low pressure brick cleaning</strong>
 									<!-- <p>Lorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam. </p> -->
 								</div><!-- end col -->
