--- a/about-2.html
+++ b/about-2.html
@@ -50,7 +50,7 @@
         <div class="row-offcanvas row-offcanvas-left">
             <div id="sidebar-fix" class="sidebar-offcanvas">
                 <div class="side-logo clearfix">
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" style="width:80%" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><img src="images/mailservice.png" style="width:80%" alt=""></a>
                 </div><!-- end logo -->
                 <ul class="sidebar-nav clearfix">
                     <li><a href="index.html">Home</a></li>
