--- a/contact-2.html
+++ b/contact-2.html
@@ -54,7 +54,7 @@
                     <li><a href="shop-2.html">Shopping</a></li>
                     <li><a href="team.html">Workers</a></li>
                     <li><a href="blog-5.html">Blog</a></li> -->
-                    <li><a href="contact-2.html">Get In Touch</a></li>
+                    <li><a class="current" href="contact-2.html">Get In Touch</a></li>
                 </ul>
                 <div class="social">
                     <a href="https://www.facebook.com/sceneryupgrade/?ref=br_rs" data-tooltip="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>
@@ -247,7 +247,7 @@
     })(jQuery);
 
     $('#square').keyup(function() {
-        $('#price').val( ' $' + (($(this).val()*10)/100));
+        $('#price').val( ' $' + (($(this).val()*9)/100));
     });
 
 
