--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a class="navbar-brand" href="index.html"><img src="images/mailservice.png" alt="" style="width:80%"></a>
                 </div><!-- end logo -->
                 <ul class="sidebar-nav clearfix">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a class="current" href="index.html">Home</a></li>
                     <li><a href="about-2.html">About Us</a></li>
                     <li><a href="service-2.html">Services</a></li>
                     <!-- <li><a href="projects-2.html">Our Projects</a></li> -->
@@ -259,7 +259,7 @@
 					<div class="container-full">
 						<div class="general-title text-center">
 							<h4>What We Offer</h4>
-							<p class="lead">We offer more than 12 different types of services, but the most popular are:</p>
+							<p>We offer more than 12 different types of services, but the most popular are:</p>
 							<hr>
 						</div><!-- end general title -->
 
@@ -305,10 +305,10 @@
 				</section>
                 <section class="section white nopadbot">
                     <div class="container-full">
-                        <div class="general-title text-left">
+                        <div class="general-title text-center">
                             <h4>FEATURED PROJECTS</h4>
                             <hr>
-                            <p class="lead">Some of our previous projects of low pressure housewashing, gutter cleaning and commercial exterior cleaning:</p>
+                            <p>Some of our previous projects of low pressure housewashing, gutter cleaning and commercial exterior cleaning:</p>
                         </div><!-- end general title -->
 
                         <div class="portfolio">
@@ -353,10 +353,10 @@
                             </div> 
 
                             <div class="pitem entry item-w2 item-h2 cat1">
-                                <img src="images/sup8.JPG" alt="" class="img-responsive">
+                                <img src="images/gutter_cleaning_new.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
                                     <div class="buttons">
-                                        <a data-rel="prettyPhoto" href="upload/placeholder.png" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
+                                        <a data-rel="prettyPhoto" href="images/gutter_cleaning_new.jpg" class="st" rel="bookmark"><span class="fa fa-search"></span></a>
                                         <!-- <a class="st" rel="bookmark" href="gallery-single.html"><span class="fa fa-link"></span></a> -->
                                     </div>
                                 </div><!-- end magnifier -->
@@ -419,7 +419,7 @@
                 <div class="container-full">
                     <div class="general-title text-center">
                             <h4>Our Clients</h4>
-                            <p class="lead">Throughout our journey, we have been blessed with the following world-recognized brands:</p>
+                            <p>Throughout our journey, we have been blessed with the following world-recognized brands:</p>
                             <hr>
                         </div><!-- end general title -->
                         <div class="row module-wrapper text-center">
