--- a/service-2.html
+++ b/service-2.html
@@ -53,7 +53,7 @@
                 <ul class="sidebar-nav clearfix">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about-2.html">About Us</a></li>
-                    <li><a href="service-2.html">Services</a></li>
+                    <li><a class="current" href="service-2.html">Services</a></li>
                     <!-- <li><a href="projects-2.html">Our Projects</a></li> -->
                     <!-- <li><a href="shop-2.html">Shopping</a></li> -->
                     <!-- <li><a href="team.html">Workers</a></li> -->
@@ -214,7 +214,7 @@
                         <div class="general-title text-center">
                             <h4>Previous Projects</h4>
                             <hr>
-                            <p class="lead">Her you can see before and after pictures of our amazing work! Click on the filters to see our expertise in each of the services we are providing!</p>
+                            <p>Her you can see before and after pictures of our amazing work! Click on the filters to see our expertise in each of the services we are providing!</p>
                         </div><!-- end general title -->
 
                         <div class="text-left clearfix">
@@ -1076,7 +1076,7 @@
                 <div class="general-title text-center">
                     <h4>MAKE AN Appointment TODAY</h4>
                     <hr>
-                    <p class="lead">Let's see all our awesome services with custom style Sed do eiusmod tempor incididunt<br>
+                    <p>Let's see all our awesome services with custom style Sed do eiusmod tempor incididunt<br>
                     ut labore et dolore magna aliqua.</p>
                 </div><!-- end general title -->
 
