--- a/index.html
+++ b/index.html
@@ -386,30 +386,30 @@
                     <hr>
                 </div><!-- end general title -->
                 <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-5">
                     <img src="images/TEmNGUXUwf8.jpg" style="max-width: 100%; height: 800px">
                 </div>
-                    <div class="col-md-8">
+                    <div class="col-md-7">
                         <h3>Review by Joseph L. in Columbia, SC</h3>
                         <h4 style="color: #00A8FF">Project: Clean Gutters and Downspouts</h4>
-                        <p>Came in on time and was thorough and quick cleaning out our very neglected gutters. Cleaned up afterwards as well, there was no indication
-                            he was ever here! Would definitely call again.</p>
+                        <h4>Came in on time and was thorough and quick cleaning out our very neglected gutters. Cleaned up afterwards as well, there was no indication
+                            he was ever here! Would definitely call again.</h4>
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-7">
                         <h3>Review by J D. in Lugoff, SC</h3>
                         <h4 style="color: #00A8FF">Project: Powerwash Exterior Surfaces</h4>
-                        <p>Christopher spent time listening to what I wanted the finished project to look like & exceeded my expectations! I have already scheduled him to a visit in May after pollen
-                            season-my house exterior sparkles for the up coming holidays. Thanks Christopher!</p>
+                        <h4>Christopher spent time listening to what I wanted the finished project to look like & exceeded my expectations! I have already scheduled him to a visit in May after pollen
+                            season-my house exterior sparkles for the up coming holidays. Thanks Christopher!</h4>
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-7">
                         <h3>Review by Sharon H. in Columbia, SC</h3>
                         <h4 style="color: #00A8FF">Project: Powerwash Exterior Surfaces</h4>
-                        <p>I was very pleased with the results on my house and driveway. Mr. Floyd even went on my roof and cleaned the rust and mildew off of my chimney. My neighbor also decided to hire him.</p>
+                        <h4>I was very pleased with the results on my house and driveway. Mr. Floyd even went on my roof and cleaned the rust and mildew off of my chimney. My neighbor also decided to hire him.</h4>
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-7">
                         <h3>Review by Richard B. in Columbia, SC</h3>
                         <h4 style="color: #00A8FF">Project: Mow Grass and Maintain Landscaping</h4>
-                        <p>On time, and does what you need. Definitely was happy with the services that were provided.</p>
+                        <h4>On time, and does what you need. Definitely was happy with the services that were provided.</h4>
                     </div>
                 </div>
             </div><!-- end container --
