--- a/about-2.html
+++ b/about-2.html
@@ -131,7 +131,11 @@
                                     <div id="home" class="tab-pane fade in active">
                                         <div class="row">
                                             <div class="col-md-6" style="margin-top: 4em">
-                                                <p>Is to educate homeowners and business owners how to properly care for one of their most expensive purchases witch is there home or business</p>
+                                                <p>Years of experience and knowledge in power washing. LICENSED AND INSURED</p>
+
+                                                <p>Scenery Upgrade offers professional home services since 2006 to help keep your home looking clean. We have years of experience and knowledge. We are LICENSED AND INSURED. We provide low pressure power washing so it won't damage your beautiful home on the following homes, wood fences, gutter's, roof's, deck's, and patio's.</p>
+
+                                                <p> We also offer full power washing with eco friendly chemicals for concrete cleaning and hard surfaces that are not painted or finished surface's. Call us for your power washing property needs and for a free estimate!</p>
                                             </div>
                                             <div id="videoyoutube" class="col-md-5">
                                                 <iframe id="video" src="https://instagram.com/p/Ba743YRHZ9I/embed/" width=370 height=512></iframe>
@@ -149,12 +153,9 @@
                                             </div>
                                             <div class="col-md-1 hidden-xs"></div>
                                             <div class="col-md-6 "style="margin-top: 3em">
-                                                    <h3>How Did You Get Started?</h3>
-                                                    <p>I chose to work in this industry because I truly get any enjoyment out of coming to a property and it's green and moldy but when I leave I know that it is nice and clean and presentable that's why the name of my business is Scenery upgrade because that truly is what we are here for the services that we offer to upgrade the scenery.</p>
-                                                    <p>We started in this industry in 2006. We describe our business as Rooted in the community</p>
-                                                    
-                                                    <h3>What's the Most Important Part of Your Business?</h3>
-                                                    <p>The most important part to me of business that we deliver a consistent level of service to each and every project</p>
+                                                    <p>
+                                                        Is to educate homeowners and business owners how to properly care for one of their most expensive purchases witch is there home or business.
+                                                    </p>
                                             </div>
                                         </div>
                                     </div>
