--- a/about-2.html
+++ b/about-2.html
@@ -181,13 +181,11 @@
                                 <img class="img-responsive" src="images/chris_head_shot_1024.jpg" alt="">
                                 <div class="magnifier">
                                     <div class="buttons">
-                                        <a class="st" rel="bookmark" href="#"><span class="fa fa-envelope"></span></a>
-                                        <a class="st" rel="bookmark" href="#"><span class="fa fa-google-plus"></span></a>
-                                        <a class="st" rel="bookmark" href="#"><span class="fa fa-twitter"></span></a>
-                                        <a class="st" rel="bookmark" href="#"><span class="fa fa-facebook"></span></a>
+                                        <a class="st" rel="bookmark" href="https://www.linkedin.com/in/christopher-floyd-77092728/"><span class="fa fa-linkedin"></span></a>
+                                        <a class="st" rel="bookmark" href="https://www.facebook.com/sceneryupgrade/?ref=br_rs"><span class="fa fa-facebook"></span></a>
                                     </div>
-                                    <h4>Jonny Doe</h4>
-                                    <p>Cras dapibus. Vivamus elementum semper  Aenean vulementum semper Aenean vulputate eleifend tellus. </p>
+                                    <h4>Сhristopher Floyd</h4>
+                                    <p></p>
                                 </div><!-- end magnifier -->
                             </div><!-- end entry -->
                         </div><!-- end team-member -->
