--- a/contact-2.html
+++ b/contact-2.html
@@ -109,7 +109,7 @@
                     <div class="col-md-12">
 
                         <div class="appoform-wrapper noborder">
-                            <form method="post">
+                            <form method="post" id="my_form">
                                 <fieldset class="row-fluid appoform">
                                     <div class="col-md-12">
                                         <!-- <label class="sr-only">Appointment time</label>
@@ -234,7 +234,7 @@
     <!-- SLIDER REV -->
     <script src="rs-plugin/js/jquery.themepunch.tools.min.js"></script>
     <script src="rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
-
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script src="js/message.js"></script>
 
     
